--- a/index.html
+++ b/index.html
@@ -1,6 +1,417 @@
-git clone https://github.com/lukasmart/lukasmart.github.io
-cd lukasmart.github.io
-# 把你的 index.html 放進這個資料夾
-git add .
-git commit -m "Initial commit"
-git push
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LUKASMART | 饒舌歌手</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial Black', 'Impact', sans-serif;
+            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a2e 50%, #0a0a0a 100%);
+            color: #fff;
+            overflow-x: hidden;
+        }
+
+        /* 導航欄 */
+        nav {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            backdrop-filter: blur(10px);
+            padding: 20px 50px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            z-index: 1000;
+            border-bottom: 2px solid #ff0080;
+        }
+
+        .logo {
+            font-size: 28px;
+            font-weight: bold;
+            background: linear-gradient(45deg, #ff0080, #7928ca, #00d4ff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            letter-spacing: 3px;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 30px;
+        }
+
+        .nav-links a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            transition: all 0.3s;
+            position: relative;
+        }
+
+        .nav-links a:hover {
+            color: #ff0080;
+            transform: translateY(-2px);
+        }
+
+        /* 主視覺區 */
+        .hero {
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero-bg {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: 
+                radial-gradient(circle at 20% 50%, rgba(255, 0, 128, 0.3) 0%, transparent 50%),
+                radial-gradient(circle at 80% 50%, rgba(0, 212, 255, 0.3) 0%, transparent 50%);
+            animation: pulse 8s ease-in-out infinite;
+        }
+
+        @keyframes pulse {
+            0%, 100% { opacity: 0.5; }
+            50% { opacity: 1; }
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero h1 {
+            font-size: 80px;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 8px;
+            text-shadow: 0 0 20px #ff0080, 0 0 40px #ff0080;
+            animation: glow 2s ease-in-out infinite alternate;
+        }
+
+        @keyframes glow {
+            from { text-shadow: 0 0 20px #ff0080, 0 0 40px #ff0080; }
+            to { text-shadow: 0 0 30px #00d4ff, 0 0 60px #00d4ff; }
+        }
+
+        .hero p {
+            font-size: 24px;
+            color: #aaa;
+            margin-bottom: 40px;
+            letter-spacing: 2px;
+        }
+
+        .cta-button {
+            display: inline-block;
+            padding: 15px 40px;
+            background: linear-gradient(45deg, #ff0080, #7928ca);
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 50px;
+            transition: all 0.3s;
+            box-shadow: 0 0 20px rgba(255, 0, 128, 0.5);
+        }
+
+        .cta-button:hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 40px rgba(255, 0, 128, 0.8);
+        }
+
+        /* 關於區塊 */
+        section {
+            padding: 100px 50px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        h2 {
+            font-size: 48px;
+            margin-bottom: 40px;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+            background: linear-gradient(45deg, #ff0080, #00d4ff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .about-content {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 50px;
+            align-items: center;
+        }
+
+        .about-text {
+            font-size: 18px;
+            line-height: 1.8;
+            color: #ccc;
+        }
+
+        .profile-img {
+            width: 100%;
+            height: 400px;
+            background: linear-gradient(135deg, #ff0080, #7928ca, #00d4ff);
+            border-radius: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 100px;
+            box-shadow: 0 20px 60px rgba(255, 0, 128, 0.3);
+        }
+
+        /* 作品集區塊 */
+        .music-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+            margin-top: 50px;
+        }
+
+        .music-card {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(255, 0, 128, 0.3);
+            border-radius: 15px;
+            padding: 30px;
+            transition: all 0.3s;
+            cursor: pointer;
+        }
+
+        .music-card:hover {
+            transform: translateY(-10px);
+            border-color: #ff0080;
+            box-shadow: 0 20px 40px rgba(255, 0, 128, 0.4);
+        }
+
+        .music-card h3 {
+            font-size: 24px;
+            margin-bottom: 15px;
+            color: #ff0080;
+        }
+
+        .music-card p {
+            color: #aaa;
+            line-height: 1.6;
+        }
+
+        .music-card .year {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 5px 15px;
+            background: rgba(255, 0, 128, 0.2);
+            border-radius: 20px;
+            font-size: 14px;
+            color: #ff0080;
+        }
+
+        /* 聯絡區塊 */
+        .contact-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
+            margin-top: 50px;
+        }
+
+        .contact-card {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(0, 212, 255, 0.3);
+            border-radius: 15px;
+            padding: 30px;
+            text-align: center;
+            transition: all 0.3s;
+        }
+
+        .contact-card:hover {
+            border-color: #00d4ff;
+            box-shadow: 0 10px 30px rgba(0, 212, 255, 0.3);
+        }
+
+        .contact-card .icon {
+            font-size: 40px;
+            margin-bottom: 15px;
+        }
+
+        .contact-card h3 {
+            font-size: 20px;
+            margin-bottom: 10px;
+            color: #00d4ff;
+        }
+
+        .contact-card a {
+            color: #aaa;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .contact-card a:hover {
+            color: #00d4ff;
+        }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 40px;
+            background: rgba(0, 0, 0, 0.8);
+            border-top: 2px solid #ff0080;
+            color: #666;
+        }
+
+        /* 響應式設計 */
+        @media (max-width: 768px) {
+            nav {
+                padding: 15px 20px;
+                flex-direction: column;
+                gap: 15px;
+            }
+
+            .nav-links {
+                gap: 15px;
+            }
+
+            .hero h1 {
+                font-size: 40px;
+            }
+
+            .hero p {
+                font-size: 18px;
+            }
+
+            .about-content {
+                grid-template-columns: 1fr;
+            }
+
+            h2 {
+                font-size: 32px;
+            }
+
+            section {
+                padding: 60px 20px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <!-- 導航欄 -->
+    <nav>
+        <div class="logo">LUKASMART</div>
+        <div class="nav-links">
+            <a href="#home">首頁</a>
+            <a href="#about">關於</a>
+            <a href="#music">作品</a>
+            <a href="#contact">聯絡</a>
+        </div>
+    </nav>
+
+    <!-- 主視覺 -->
+    <section id="home" class="hero">
+        <div class="hero-bg"></div>
+        <div class="hero-content">
+            <h1>LUKASMART</h1>
+            <p>🎤 饒舌歌手 | 音樂創作者 | 街頭詩人</p>
+            <a href="#music" class="cta-button">聆聽我的音樂</a>
+        </div>
+    </section>
+
+    <!-- 關於我 -->
+    <section id="about">
+        <h2>關於我</h2>
+        <div class="about-content">
+            <div class="about-text">
+                <p>Yo! 我是 LUKASMART，一位來自台灣的饒舌歌手。</p>
+                <p>用音樂說故事，用節奏傳達態度。從街頭到舞台，我的每一首歌都是生活的真實寫照。</p>
+                <p>嘻哈不只是音樂，更是一種生活方式。我用 Rap 表達自我，用 Beat 征服世界。</p>
+                <p>📍 台北 | 🎵 Hip-Hop / Trap / Boom Bap</p>
+            </div>
+            <div class="profile-img">🎤</div>
+        </div>
+    </section>
+
+    <!-- 作品集 -->
+    <section id="music">
+        <h2>我的作品</h2>
+        <div class="music-grid">
+            <div class="music-card">
+                <h3>街頭夢想</h3>
+                <p>這首歌講述從街頭到舞台的奮鬥歷程，每個 bar 都是真實經歷的濃縮。</p>
+                <span class="year">2024</span>
+            </div>
+            <div class="music-card">
+                <h3>城市節奏</h3>
+                <p>融合 Trap 與傳統元素，描繪台北都市生活的快節奏與壓力。</p>
+                <span class="year">2023</span>
+            </div>
+            <div class="music-card">
+                <h3>真實自我</h3>
+                <p>最私密的內心獨白，用最真誠的態度面對自己和這個世界。</p>
+                <span class="year">2023</span>
+            </div>
+            <div class="music-card">
+                <h3>不妥協</h3>
+                <p>充滿爆發力的 Boom Bap 風格，宣示永不妥協的音樂態度。</p>
+                <span class="year">2022</span>
+            </div>
+        </div>
+    </section>
+
+    <!-- 聯絡方式 -->
+    <section id="contact">
+        <h2>聯絡我</h2>
+        <div class="contact-grid">
+            <div class="contact-card">
+                <div class="icon">📧</div>
+                <h3>Email</h3>
+                <a href="mailto:lukasmart@example.com">lukasmart@example.com</a>
+            </div>
+            <div class="contact-card">
+                <div class="icon">📱</div>
+                <h3>Instagram</h3>
+                <a href="https://instagram.com/lukasmart" target="_blank">@lukasmart</a>
+            </div>
+            <div class="contact-card">
+                <div class="icon">🎵</div>
+                <h3>YouTube</h3>
+                <a href="https://youtube.com/@lukasmart" target="_blank">LUKASMART Official</a>
+            </div>
+            <div class="contact-card">
+                <div class="icon">🎶</div>
+                <h3>Spotify</h3>
+                <a href="https://spotify.com" target="_blank">收聽我的音樂</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 LUKASMART. All Rights Reserved. | Keep It Real 💯</p>
+    </footer>
+
+    <script>
+        // 平滑滾動效果
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+    </script>
+</body>
+</html>
